Переделывание код главной страницы асинхронно, фикс проблемы с бесконечным добавлением товаров

--- a/Pages/Account/Cart.razor
+++ b/Pages/Account/Cart.razor
@@ -36,7 +36,7 @@
                                         <div class="counter-block__counter">
                                             <div class="counter__minus" @onclick="() => Decrement(cartProduct)" />
                                             <input class="counter-input" disabled type="text" maxlength="3" @bind="cartProduct.Count" aria-label="Место ввода количества желаемого товара">
-                                            <div class="counter__plus" @onclick="async () => await IncrementAsync(cartProduct)" />
+                                            <div class="counter__plus" @onclick="() => Increment(cartProduct)" />
                                         </div>
                                         <span class="counter-block__price">@((cartProduct.ProductArticle.Model.Price*cartProduct.Count).ToString("### ### ###")) ₽</span>
                                     </div>
@@ -46,11 +46,11 @@
                                 <span class="block-price__discount-price">22 400 ₽</span>
                                 </div>*@
                                 <div class="product-card__icons-block">
-                                    <a class="icons-block__cart-icon" @onclick="async () => await RemoveProductInCartAsync(cartProduct)" aria-label="Удалить товар @cartProduct.ProductArticle.Model.Name из корзины"><img src="/icons/cart/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></a>
+                                    <a class="icons-block__cart-icon" @onclick="async () => await RemoveProductFromCartAsync(cartProduct)" aria-label="Удалить товар @cartProduct.ProductArticle.Model.Name из корзины"><img src="/icons/cart/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></a>
                                     <label class="cart-icon__select-checkbox select-checkbox"><input name="login-remember-me-checkbox" @bind="cartProduct.IsSelected" @onclick="() => ProductSelecterToggle(cartProduct)" type="checkbox" aria-label="Чек-бокс для выборки всех товаров в корзине"><span></span></label>
                                     @if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Id == cartProduct.ProductArticle.Id))
                                     {
-                                        <a class="icons-block__favorites-icon" @onclick="async () => await RemoveProductInFavoritesAsync(cartProduct)" aria-label="Удалить товар @cartProduct.ProductArticle.Model.Name из избранного"><img src="/icons/cart/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
+                                        <a class="icons-block__favorites-icon" @onclick="async () => await RemoveProductFromFavoritesAsync(cartProduct)" aria-label="Удалить товар @cartProduct.ProductArticle.Model.Name из избранного"><img src="/icons/cart/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
                                     }
                                     else
                                     {
