--- a/Pages/Account/Favorites.razor
+++ b/Pages/Account/Favorites.razor
@@ -26,14 +26,17 @@
                             <div class="favorites__product-card">
                                 <div class="favorites__image-block">
                                     <a class="favorites__image" href="#" aria-label="Перейти в личную карточку товара @favoriteProduct.ProductArticle.Model.Subcategory @favoriteProduct.ProductArticle.Model.Name"><img src="data:image/png;base64,@Convert.ToBase64String(favoriteProduct.ProductArticle.Model.MainPhoto)" alt="Картинка @favoriteProduct.ProductArticle.Model.Name" title="@favoriteProduct.ProductArticle.Model.Name"></a>
-                                    <a class="favorites__favorites-icon" @onclick="async () => await RemoveProductInFavoritesAsync(favoriteProduct)" aria-label="Удалить товар @favoriteProduct.ProductArticle.Model.Name из избранного"><img src="/icons/favorites/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
-                                    @if (currentUser.Cart.Products.Any(cartProduct => cartProduct.ProductArticle.Id == favoriteProduct.ProductArticle.Id))
+                                    <a class="favorites__favorites-icon" @onclick="() => RemoveProductFromFavoritesAsync(favoriteProduct)" aria-label="Удалить товар @favoriteProduct.ProductArticle.Model.Name из избранного"><img src="/icons/favorites/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
+                                    @if (favoriteProduct.ProductArticle.Count != 0)
                                     {
-                                        <a class="favorites__cart-icon" @onclick="async () => await RemoveProductInCartAsync(favoriteProduct)" aria-label="Добавить товар @favoriteProduct.ProductArticle.Model.Name в корзину"><img src="/icons/favorites/Slash-cart.svg" alt="Иконка корзины" title="Добавить в корзину"></a>
-                                    }
-                                    else
-                                    {
-                                        <a class="favorites__cart-icon" @onclick="async () => await AddProductInCartAsync(favoriteProduct)" aria-label="Добавить товар @favoriteProduct.ProductArticle.Model.Name в корзину"><img src="/icons/favorites/Cart.svg" alt="Иконка корзины" title="Добавить в корзину"></a>
+                                        @if (currentUser.Cart.Products.Any(cartProduct => cartProduct.ProductArticle.Id == favoriteProduct.ProductArticle.Id))
+                                        {
+                                            <a class="favorites__cart-icon" @onclick="() => RemoveProductFromCartAsync(favoriteProduct)" aria-label="Добавить товар @favoriteProduct.ProductArticle.Model.Name в корзину"><img src="/icons/favorites/Slash-cart.svg" alt="Иконка корзины" title="Добавить в корзину"></a>
+                                        }
+                                        else
+                                        {
+                                            <a class="favorites__cart-icon" @onclick="() => AddProductInCartAsync(favoriteProduct)" aria-label="Добавить товар @favoriteProduct.ProductArticle.Model.Name в корзину"><img src="/icons/favorites/Cart.svg" alt="Иконка корзины" title="Добавить в корзину"></a>
+                                        }
                                     }
                                     @*<div class="favorites__block-discount hasDiscount"> hasDiscount
                                     <span class="block-discount__amount">-20%</span>
