--- a/Pages/Index.razor.Carusel.scss
+++ b/Pages/Index.razor.Carusel.scss
@@ -41,6 +41,7 @@
         position: absolute;
         top: 40%;
         right: 31%;
+        color: black;
     }
 
     ::deep .slick-prev {
@@ -69,6 +70,7 @@
         position: absolute;
         top: 40%;
         left: 31%;
+        color: black;
     }
 
     ::deep .slick-next {
