Фикс ошибки при валидации моков + небольшой фикс в сущностях

--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -17,6 +17,7 @@
 @using WMBlazorSlickCarousel.WMBSC
 @using Microsoft.AspNetCore.Mvc
 @using WebStore.Services
-@using WebStore.Domain.Consts 
+@using WebStore.Domain.Consts
 @using Microsoft.EntityFrameworkCore;
 @using WebStore.Domain.Types.Translators;
+@using Domain.Types;
