--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -6,6 +6,14 @@
   margin: 0;
   -webkit-tap-highlight-color: transparent; }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
+  -webkit-text-fill-color: black !important;
+  -webkit-background-clip: text; }
+
 h1 {
   margin: 0; }
 
